Поправен index.html с пълен код

--- a/index.html
+++ b/index.html
@@ -1,1 +1,54 @@
 
+<!DOCTYPE html>
+<html lang="bg">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Green Style ЕООД - Озеленяване</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            background: #f4fff4;
+            color: #2e4f2e;
+        }
+        header {
+            background-color: #2e7d32;
+            padding: 20px;
+            text-align: center;
+            color: white;
+        }
+        header h1 {
+            margin: 0;
+        }
+        .content {
+            padding: 30px;
+            text-align: center;
+        }
+        footer {
+            background-color: #c8e6c9;
+            padding: 20px;
+            text-align: center;
+            font-size: 14px;
+            color: #1b3b1b;
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <h1>Green Style ЕООД</h1>
+        <p>Професионално озеленяване и поддръжка</p>
+    </header>
+
+    <div class="content">
+        <h2>Добре дошли!</h2>
+        <p>Предлагаме услуги по озеленяване, проектиране и поддръжка на зелени площи. Работим в региона на Монтана.</p>
+    </div>
+
+    <footer>
+        <p>Тел: 0896 299 972 | 0876 299 930</p>
+        <p>Email: green_style24@abv.bg</p>
+        <p>Адрес: с. Мокреш, общ. Вълчедръм, обл. Монтана</p>
+    </footer>
+</body>
+</html>
